--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^7.12.0",
     "path": "^0.12.7",
     "fs": "^0.0.1-security",
-    "@netlify/functions": "^5.1.2"
+    "@netlify/functions": "^5.1.2",
+    "next": "^16.1.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
