--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "^14.1.0",
