--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^15.12.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
